[ai playerbot] AiPlayerbot.RandomBotAutologin config parameter to give each player a bunch of bots from random bot pool on login

--- a/win/VC100/game.vcxproj
+++ b/win/VC100/game.vcxproj
@@ -482,6 +482,7 @@
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotAIConfig.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotFactory.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotMgr.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\RandomPlayerbotMgr.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\Action.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\ActionBasket.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\actions\AcceptQuestAction.cpp" />
@@ -892,6 +893,7 @@
     <ClInclude Include="..\..\src\game\playerbot\playerbotDefs.h" />
     <ClInclude Include="..\..\src\game\playerbot\PlayerbotFactory.h" />
     <ClInclude Include="..\..\src\game\playerbot\PlayerbotMgr.h" />
+    <ClInclude Include="..\..\src\game\playerbot\RandomPlayerbotMgr.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\Action.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\ActionBasket.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\actions\AcceptDuelAction.h" />
