[ai] random bots now have random mounts [ai] random healing and mana potions for random bots [ai] random bot equipment randomization enhancements [ai] do not fall under the surface on random pvp attack [ai] fill random bot pool automatically [ai] better mount handling [ai] make sure random bots are not naked after randomization [ai] random warrior, paladin and shaman bots have shield and one-hand weapon or two-hand weapon in inventory for a second equipment set [ai] init spells after quests - this fixes some spells not learned for random bots [ai] verbose flag for actions executed with "do" command [ai] better item stat handling for bot randomization [ai] reset strategies on party changes [ai] skil random item enchants sometimes [ai] make random bots have 0 experience to disable quick level gains [ai] remove all auras after bot randomization [ai] better talent randomization for random bots [ai] restrict any interaction with random bots until in group [ai-zero] summon command to summon bots in a city or inn [ai] switching engines moved from PlayerbotAI to actions [ai] fix for ahbot stacking >20 quest items

--- a/win/VC100/game.vcxproj
+++ b/win/VC100/game.vcxproj
@@ -459,6 +459,7 @@
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotAIConfig.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotFactory.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotMgr.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\RandomPlayerbotFactory.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\RandomPlayerbotMgr.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\Action.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\ActionBasket.cpp" />
@@ -643,7 +644,9 @@
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\CurrentCcTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\CurrentTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\DpsTargetValue.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\strategy\values\DuelTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\GrindTargetValue.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\strategy\values\InvalidTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\ItemCountValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\ItemForSpellValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\LeastHpTargetValue.cpp" />
@@ -865,6 +868,7 @@
     <ClInclude Include="..\..\src\game\playerbot\playerbotDefs.h" />
     <ClInclude Include="..\..\src\game\playerbot\PlayerbotFactory.h" />
     <ClInclude Include="..\..\src\game\playerbot\PlayerbotMgr.h" />
+    <ClInclude Include="..\..\src\game\playerbot\RandomPlayerbotFactory.h" />
     <ClInclude Include="..\..\src\game\playerbot\RandomPlayerbotMgr.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\Action.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\ActionBasket.h" />
@@ -1085,9 +1089,11 @@
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\CurrentTargetValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\DistanceValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\DpsTargetValue.h" />
+    <ClInclude Include="..\..\src\game\playerbot\strategy\values\DuelTargetValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\GrindTargetValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\HasAvailableLootValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\HasTotemValue.h" />
+    <ClInclude Include="..\..\src\game\playerbot\strategy\values\InvalidTargetValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\IsBehindValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\IsMovingValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\ItemCountValue.h" />
