--- a/win/VC100/tests.vcxproj
+++ b/win/VC100/tests.vcxproj
@@ -261,6 +261,7 @@
     <ClCompile Include="..\..\src\tests\EventTestCase.cpp" />
     <ClCompile Include="..\..\src\tests\ExternalEventHelperTestCase.cpp" />
     <ClCompile Include="..\..\src\tests\HealDruidTestCase.cpp" />
+    <ClCompile Include="..\..\src\tests\HolyPriestTestCase.cpp" />
     <ClCompile Include="..\..\src\tests\HunterNonCombatTestCase.cpp" />
     <ClCompile Include="..\..\src\tests\FireMageTestCase.cpp" />
     <ClCompile Include="..\..\src\tests\FrostMageTestCase.cpp" />
