--- a/src/game/playerbot/aiplayerbot.conf.dist.in
+++ b/src/game/playerbot/aiplayerbot.conf.dist.in
@@ -65,6 +65,9 @@ AiPlayerbot.RandomGearLoweringChance = 0.15
 # Quest items to leave (do not destroy)
 AiPlayerbot.RandomBotQuestItems = "6948,5175,5176,5177,5178"
 
+# Spells every random bot will learn on randomize (54197 - cold weather flying)
+AiPlayerbot.RandomBotSpellIds = 54197
+
 # Intervals
 AiPlayerbot.RandomBotUpdateInterval = 60
 AiPlayerbot.RandomBotCountChangeInterval = 5 * 24 * 3600
