--- a/win/VC100/game.vcxproj.filters
+++ b/win/VC100/game.vcxproj.filters
@@ -421,6 +421,7 @@
     <ClCompile Include="..\..\src\game\SkillDiscovery.cpp" />
     <ClCompile Include="..\..\src\game\SkillExtraItems.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\actions\WhoAction.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\PlayerbotSecurity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\game\ahbot\AhBot.h" />
@@ -889,5 +890,6 @@
     <ClInclude Include="..\..\src\game\SkillDiscovery.h" />
     <ClInclude Include="..\..\src\game\SkillExtraItems.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\actions\WhoAction.h" />
+    <ClInclude Include="..\..\src\game\playerbot\PlayerbotSecurity.h" />
   </ItemGroup>
 </Project>
