--- a/win/VC100/game.vcxproj
+++ b/win/VC100/game.vcxproj
@@ -555,6 +555,7 @@
     <ClCompile Include="..\..\src\game\playerbot\strategy\druid\FeralDruidStrategy.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\druid\GenericDruidNonCombatStrategy.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\druid\GenericDruidStrategy.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\strategy\generic\AttackEnemyPlayersStrategy.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\generic\DpsAoeStrategy.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\generic\DpsAssistStrategy.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\generic\DuelStrategy.cpp" />
@@ -656,6 +657,7 @@
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\CurrentTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\DpsTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\DuelTargetValue.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\strategy\values\EnemyPlayerValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\GrindTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\InvalidTargetValue.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\values\ItemCountValue.cpp" />
@@ -990,6 +992,7 @@
     <ClInclude Include="..\..\src\game\playerbot\strategy\Engine.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\Event.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\ExternalEventHelper.h" />
+    <ClInclude Include="..\..\src\game\playerbot\strategy\generic\AttackEnemyPlayersStrategy.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\generic\AttackRtiStrategy.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\generic\AttackWeakStrategy.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\generic\CastTimeStrategy.h" />
@@ -1114,6 +1117,7 @@
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\DistanceValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\DpsTargetValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\DuelTargetValue.h" />
+    <ClInclude Include="..\..\src\game\playerbot\strategy\values\EnemyPlayerValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\GrindTargetValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\HasAvailableLootValue.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\values\HasTotemValue.h" />
