[ai-115] basic pvp strategy

--- a/win/VC100/game.vcxproj.filters
+++ b/win/VC100/game.vcxproj.filters
@@ -437,6 +437,8 @@
     <ClCompile Include="..\..\src\game\playerbot\strategy\actions\WhoAction.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\PlayerbotSecurity.cpp" />
     <ClCompile Include="..\..\src\game\playerbot\strategy\actions\LfgActions.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\strategy\generic\AttackEnemyPlayersStrategy.cpp" />
+    <ClCompile Include="..\..\src\game\playerbot\strategy\values\EnemyPlayerValue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\game\ahbot\AhBot.h" />
@@ -945,6 +947,8 @@
     <ClInclude Include="..\..\src\game\playerbot\strategy\actions\WhoAction.h" />
     <ClInclude Include="..\..\src\game\playerbot\PlayerbotSecurity.h" />
     <ClInclude Include="..\..\src\game\playerbot\strategy\actions\LfgActions.h" />
+    <ClInclude Include="..\..\src\game\playerbot\strategy\generic\AttackEnemyPlayersStrategy.h" />
+    <ClInclude Include="..\..\src\game\playerbot\strategy\values\EnemyPlayerValue.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\game\Player.h.orig" />
