[ai-122] disable debug log for bots not in group

--- a/src/game/playerbot/aiplayerbot.conf.dist.in
+++ b/src/game/playerbot/aiplayerbot.conf.dist.in
@@ -94,4 +94,4 @@ AiPlayerbot.RandomBotTeleportDistance = 400
 
 # Debug switches
 AiPlayerbot.SpellDump = false
-
+AiPlayerbot.LogInGroupOnly = true
