--- a/src/game/playerbot/aiplayerbot.conf.dist.in
+++ b/src/game/playerbot/aiplayerbot.conf.dist.in
@@ -49,6 +49,10 @@ AiPlayerbot.MediumMana = 40
 # Enable random bot system
 AiPlayerbot.RandomBotAutologin = 0
 
+# Random bot default strategies (applied after defaults)
+AiPlayerbot.RandomBotCombatStrategies = +dps,+attack weak
+AiPlayerbot.RandomBotNonCombatStrategies = +grind,+move random,-loot,-gather
+
 # Create random bot characters automatically
 AiPlayerbot.RandomBotAutoCreate = 1
 
