[ai-184] ahbot: projectile category (to be used with buyOnlyRare pricing strategy)

--- a/src/game/ahbot/ahbot.conf.dist.in
+++ b/src/game/ahbot/ahbot.conf.dist.in
@@ -191,3 +191,7 @@ AhBot.PriceMultiplier.Buy.SocketGems = 1.0
 AhBot.MaxAuctionCount.OtherTrade.white = 10
 AhBot.PriceMultiplier.Sell.OtherTrade = 1.0
 AhBot.PriceMultiplier.Buy.OtherTrade = 1.0
+
+AhBot.PriceMultiplier.Sell.projectile = 1.0
+AhBot.PriceMultiplier.Buy.projectile = 1.0
+AhBot.PricingStrategy.projectile = buyOnlyRare
